# django-jet-1

./: .gitignore  gulpfile.js  package.json  pyproject.toml  setup.py
jet/: __init__.py
jet/static/jet/css/: vendor.css
jet/static/jet/css/themes/default/: base.css  base.css.map
jet/static/jet/css/themes/green/: base.css  base.css.map
jet/static/jet/css/themes/light-blue/: base.css  base.css.map
jet/static/jet/css/themes/light-gray/: base.css  base.css.map
jet/static/jet/css/themes/light-green/: base.css  base.css.map
jet/static/jet/css/themes/light-violet/: base.css  base.css.map
jet/static/jet/js/src/features/: changeform-tabs.js  inlines.js  selects.js
jet/static/jet/js/src/layout-updaters/: related-widget-wrapper.js
jet/templates/admin/: base.html
jet/templatetags/: jet_tags.py
