[tool.poetry]
name = "rds-django-jet"
version = "1.0.7.1"
description = ""
authors = ["Vladimir Puzakov <vppuzakov@gmail.com>"]

packages = [
    { include = "jet" },
    { include = "jet/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0"

[tool.poetry.dev-dependencies]
wheel = "^0.33.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
